# dino_test

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: default.yaml
docs/requirements/: 2026-07-20-dino-anomaly-env-requirements.md
docs/superpowers/plans/: 2026-07-20-dino-anomaly-env.md
docs/superpowers/specs/: 2026-07-20-dino-anomaly-env-design.md  2026-07-23-fixed-size-tiling-design.md
scripts/: dino_cli.bat  dino_cli.sh  run_tests.bat  run_tests.sh  run_ui.bat  run_ui.sh  spike_backbone.py
src/dino_exp/: cli.py  config.py  datasets.py  errors.py  infer.py  logs.py  perf.py  retrain.py  tiles.py  train.py  validate.py
src/dino_exp/feedback/: staging.py  store.py
src/dino_exp/models/: dual_bank.py  registry.py
src/dino_exp/webui/: app.py  common.py  dataset_tab.py  jobs.py  perf_tab.py  settings_tab.py  test_tab.py  train_tab.py  validate_tab.py
tests/: conftest.py  test_cli.py  test_config.py  test_datasets.py  test_dual_bank.py  test_feedback.py  test_infer.py  test_perf.py  test_registry.py  test_retrain.py  test_smoke.py  test_tiles.py  test_tiles_fixed.py  test_train.py  test_validate.py  test_webui_jobs.py
